[gd_scene load_steps=13 format=3 uid="uid://d0ahfq442box7"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_vbivm"]
[ext_resource type="Texture2D" uid="uid://bbg3o5qc5p01f" path="res://art/characters/mask-man/all-in-one.png" id="6_m2dc0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ns2x1"]
size = Vector2(18.5, 24.5)

[sub_resource type="Animation" id="Animation_dfcni"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5]
}

[sub_resource type="Animation" id="Animation_pet3o"]
resource_name = "double_jump"
length = 0.60001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [29, 30, 31, 32, 33, 34]
}

[sub_resource type="Animation" id="Animation_fbjti"]
resource_name = "fall"
length = 0.10001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [35]
}

[sub_resource type="Animation" id="Animation_w5syd"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_o8blx"]
resource_name = "jump"
length = 0.10001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [11]
}

[sub_resource type="Animation" id="Animation_risj1"]
resource_name = "run"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_u2xvy"]
resource_name = "wall_jump"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28]
}

[sub_resource type="Animation" id="Animation_47pih"]
resource_name = "hit"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7m4uj"]
_data = {
"RESET": SubResource("Animation_dfcni"),
"double_jump": SubResource("Animation_pet3o"),
"fall": SubResource("Animation_fbjti"),
"hit": SubResource("Animation_47pih"),
"idle": SubResource("Animation_w5syd"),
"jump": SubResource("Animation_o8blx"),
"run": SubResource("Animation_risj1"),
"wall_jump": SubResource("Animation_u2xvy")
}

[node name="Player" type="CharacterBody2D"]
scale = Vector2(2, 2)
script = ExtResource("1_vbivm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.75, 3.75)
shape = SubResource("RectangleShape2D_ns2x1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7m4uj")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("6_m2dc0")
hframes = 43
frame = 5

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_animation_player_animation_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
